--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^17.0.52",
+    "@types/react-dom": "^17.0.18",
     "node-sass": "5.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.5",
+    "react-redux": "^7.2.9",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "redux": "^4.2.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -44,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "@types/react-router-dom": "^5.3.1"
   }
 }
